--- a/user/themes/troystories/templates/page.html.twig
+++ b/user/themes/troystories/templates/page.html.twig
@@ -1,14 +1,18 @@
 {% embed 'partials/base.html.twig' %}
 
 {% block body %}
-<body class="page-individual">
+<body class="page-individual page-{{ page.slug }}">
 {% endblock %}
 
 {% block content %}
 
 <div class="site-content" role="main">
     <article class="page">
-        <h1 class="post-title">{{page.title}}</h1>
+		{% if page.header.image %}
+		<div class="page-photo">
+			<img src="{{ page.media[page.header.image].url }}" alt="{{page.title}}">
+		</div>
+		{% endif %}
         <div class="page-content">
             {{content}}
         </div>
