Added "coming soon" sub-footer

--- a/user/themes/troystories/templates/default.html.twig
+++ b/user/themes/troystories/templates/default.html.twig
@@ -9,9 +9,6 @@
     </div>
 </div>
 
-{% if config.plugins.pagination.enabled and collection.params.pagination %} 
-<!-- Pagination -->
-    {% include 'partials/pagination.html.twig' with {'base_url': page.url, 'pagination':collection.params.pagination} %} 
-{% endif %}
+{% include 'partials/coming-soon.html.twig' %} 
 
 {% endblock %}
