Updated twitter profile

--- a/user/themes/troystories/templates/partials/footer.html.twig
+++ b/user/themes/troystories/templates/partials/footer.html.twig
@@ -7,7 +7,7 @@
   <div class="social">
     <ul>
       <li><a href="http://facebook.com/troynystories"><img src="{{ theme_url }}/images/icon-facebook.png" alt="Troy Stories on Facebook" srcset="{{ theme_url }}/images/icon-facebook.svg" /></a></li>
-      <li><a href="http://twitter.com/troynystories"><img src="{{ theme_url }}/images/icon-twitter.png" alt="Troy Stories on Twitter" srcset="{{ theme_url }}/images/icon-twitter.svg" /></a></li>
+      <li><a href="http://twitter.com/troy_stories"><img src="{{ theme_url }}/images/icon-twitter.png" alt="Troy Stories on Twitter" srcset="{{ theme_url }}/images/icon-twitter.svg" /></a></li>
       <li><a href="http://instagram.com/troystories"><img src="{{ theme_url }}/images/icon-instagram.png" alt="Troy Stories on Instagram" srcset="{{ theme_url }}/images/icon-instagram.svg" /></a></li>
     </ul>
   </div>
