--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -397,8 +397,10 @@ hr {
 }
 .page-photo,
 .story-photo {
+/*
   margin-left: -20px;
   margin-right: -20px;
+*/
   margin-bottom: 1rem;
 }
 .page-photo img,
@@ -435,7 +437,9 @@ hr {
 .site-pagination,
 .load-more {
   text-align: center;
+  /*
   margin: -20px;
+  */
 }
 .load-more span,
 .load-more a,
