Added Animated Logo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -362,6 +362,9 @@ hr {
 .site-header h1 {
   margin: 0 0 -20px;
 }
+.site-header:hover path {
+  stroke: #E92739 !important;
+}
 .site-header img {
   max-width: 320px;
 }
