Fixed transition bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -363,10 +363,10 @@ hr {
   margin: 0 0 -20px;
 }
 .site-header path {
-  transform: stroke 1s linear;
+  transition: stroke 1s linear;
 }
 .site-header:hover path {
-  transform: stroke .25s linear;
+  transition: stroke .25s linear;
   stroke: #E92739 !important;
 }
 .site-header img {
