--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -353,7 +353,7 @@ hr {
 
 .site-header {
   text-align: center;
-  max-width: 500px;
+  max-width: 640px;
   margin: 0 auto;
 }
 .site-header a {
@@ -361,6 +361,9 @@ hr {
 }
 .site-header h1 {
   margin: 0 0 -20px;
+}
+.site-header .logo a {
+  display: none;
 }
 .site-header path {
   transition: stroke 1s linear;
