--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -363,7 +363,7 @@ hr {
   margin: 0 0 -20px;
 }
 .site-header .logo a {
-  display: none;
+  opacity: 0;
 }
 .site-header path {
   transition: stroke 1s linear;
